<resources>
    <string name="app_name">Foodrism</string>
    <string name="login_success">Login Success!</string>
    <string name="login_failed">Login Failed! Check your connection</string>
    <string name="explore">Explore</string>
    <string name="food_description">Food Description</string>
    <string name="food_ingredients">Main Ingredients:</string>
    <string name="food_nutrition">Nutrition:</string>
    <string name="food_calories">Calories:</string>
    <string name="food_name">Food Name</string>
    <string name="food_origin">Food Origin</string>
    <string name="maps">Find on Google Maps</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="profile_name">Profile Name</string>
    <string name="logout">LOGOUT</string>
    <string name="profile_menu">Profile Menu</string>
    <string name="logout_message">Are you sure want to logout?</string>
    <string name="logout_continue">Yes</string>
    <string name="logout_success">Logged out</string>
    <string name="openCamera">Camera</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="camera_error">Camera Error</string>
    <string name="camera_shot_error">Cannot take photo</string>
    <string name="camera_permission_error">Cannot start camera. Please allow the permission!</string>
    <string name="scanned_picture">Scanned Picture</string>
    <string name="scan_result">Scan Result</string>
    <string name="analyze_result">Analyze Result:</string>
    <string name="not_available">Not available yet…</string>
    <string name="profile_email">Email</string>
    <string name="logout_cancel">Cancel</string>
    <string name="food_accuracy">90%</string>
    <string name="scan_again">Scan Again</string>
    <string name="search_maps">Find nearby</string>
    <string name="maps_title">Find Nearby:</string>
    <string name="password_error">Password Invalid</string>
    <string name="email_error">Email Invalid</string>
    <string name="login">Login</string>
    <string-array name="data_name">
        <item>Gulai Ayam</item>
        <item>Kerak Telor</item>
        <item>Soto Ayam</item>
        <item>Bika Ambon</item>
        <item>Gudeg</item>
        <item>Klepon</item>
        <item>Martabak</item>
        <item>Nasi Tumpeng</item>
        <item>Pecel</item>
        <item>Pempek</item>
        <item>Rawon</item>
        <item>Rendang</item>
        <item>Sate Ayam</item>
        <item>Serabi</item>
        <item>Tahu Gejrot</item>
    </string-array>
</resources>