<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/analyzeProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="330dp"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="32dp"
                android:elevation="10dp"
                android:transitionName="cardStory"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivPreviewImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/scanned_picture"
                    tools:src="@tools:sample/backgrounds/scenic" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/tvAnalyze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:gravity="center"
                android:text="@string/analyze_result"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAnalyzeResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:gravity="center"
                android:text="@string/not_available"
                android:textStyle="italic"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAnalyze"
                tools:visibility="visible" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cvItemResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                card_view:cardCornerRadius="16dp"
                card_view:layout_constraintTop_toBottomOf="@id/tvAnalyzeResult">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvFoodImage"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        card_view:cardCornerRadius="14dp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/ivFoodItems"
                            android:layout_width="120dp"
                            android:layout_height="100dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/food_name"
                            tools:src="@tools:sample/backgrounds/scenic" />
                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:id="@+id/tvFoodName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@id/cvFoodImage"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        card_view:layout_constraintStart_toEndOf="@+id/cvFoodImage"
                        card_view:layout_constraintTop_toTopOf="@+id/cvFoodImage"
                        tools:text="@string/food_name" />

                    <TextView
                        android:id="@+id/tvAccuracy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/cvFoodImage"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tvFoodName"
                        card_view:layout_constraintStart_toEndOf="@+id/tvFoodName"
                        tools:text="@string/food_accuracy" />

                    <TextView
                        android:id="@+id/tvFoodDescription"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        card_view:layout_constraintBottom_toBottomOf="@+id/cvFoodImage"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toStartOf="@+id/tvFoodName"
                        card_view:layout_constraintTop_toBottomOf="@+id/tvFoodName"
                        card_view:layout_constraintVertical_bias="0.0"
                        tools:text="@string/food_description" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/openCamera"
                android:src="@drawable/ic_camera_baseline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvItemResult" />

            <TextView
                android:id="@+id/tvCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/scan_again"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCamera" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>